# cor-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  justfile  rumdl.toml  rustfmt.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/workflows/: changelog.yml  ci.yml  release.yml  screenshots.yml  zizmor.yml
.specify/memory/: constitution.md
assets/: demo.jsonl
benches/: throughput.rs
scripts/: demo-screenshots.sh
specs/001-log-colorizer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-log-colorizer/contracts/: cli.md
src/: cli.rs  config.rs  error.rs  fields.rs  formatter.rs  level.rs  lib.rs  main.rs  parser.rs  timestamp.rs
tasks/: issue-3.md
tests/fixtures/: bunyan.jsonl  embedded.jsonl  logrus.jsonl  pino.jsonl  slog.jsonl  structlog.jsonl  zap.jsonl
tests/integration/: basic_pipe.rs  cli_flags.rs  color_control.rs  config_custom.rs  embedded_json.rs  level_filter.rs  mixed_input.rs  mod.rs  multiline.rs  streaming.rs
