[package]
name = "cor"
version = "2026.2.3"
edition = "2024"
rust-version = "1.92"
description = "Colorize JSON-structured log lines from stdin"
license = "MIT"
repository = "https://github.com/alexsavio/jgb"
keywords = ["json", "log", "color", "cli", "structured-logging"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cor"
path = "src/main.rs"

[lib]
name = "cor"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
owo-colors = { version = "4", features = ["supports-colors"] }
jiff = "0.2.19"
toml = "0.9.8"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[features]
simd = ["dep:simd-json"]

[dependencies.simd-json]
version = "0.17"
optional = true

[[bench]]
name = "throughput"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
