[package]
name = "cor"
version = "2026.4.0"
edition = "2024"
rust-version = "1.92"
description = "Colorize JSON-structured log lines from stdin"
license = "MIT"
repository = "https://github.com/alexsavio/cor-cli"
readme = "README.md"
keywords = ["json", "log", "color", "cli", "structured-logging"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cor"
path = "src/main.rs"

[lib]
name = "cor"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
regex = "1"
owo-colors = { version = "4.3", features = ["supports-colors"] }
jiff = "0.2.24"
toml = "1.1"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3.27"

[features]
simd = ["dep:simd-json"]

[dependencies.simd-json]
version = "0.17"
optional = true

[[bench]]
name = "throughput"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
